learning/vine-compare/camlidl-1.05/compiler/parser_midl.output
   0  $accept : %entry% $end

   1  file : component_list EOF

   2  component_list :
   3                 | component_list component

   4  component : const_decl SEMI
   5            | type_decl SEMI
   6            | attributes struct_declarator SEMI
   7            | attributes union_declarator SEMI
   8            | attributes enum_declarator SEMI
   9            | attributes STRUCT opt_ident SEMI
  10            | attributes UNION opt_ident SWITCH LPAREN simple_type_spec ident RPAREN SEMI
  11            | attributes UNION opt_ident SEMI
  12            | fun_decl SEMI
  13            | interface_attributes INTERFACE tydef_ident opt_superinterface LBRACE component_list RBRACE opt_semi
  14            | interface_attributes INTERFACE tydef_ident SEMI
  15            | IMPORT STRING SEMI
  16            | quote opt_semi

  17  const_decl : CONST attributes type_spec pointer_opt IDENT EQUAL lexpr

  18  type_decl : TYPEDEF attributes type_spec declarators

  19  fun_decl : attributes type_spec pointer_opt IDENT LPAREN param_list_declarator RPAREN opt_quotes

  20  opt_quotes : opt_quotes QUOTE LPAREN STRING RPAREN
  21             | opt_quotes QUOTE LPAREN ident COMMA STRING RPAREN
  22             |

  23  param_list_declarator :
  24                        | VOID
  25                        | param_declarators

  26  param_declarators : param_declarator
  27                    | param_declarators COMMA param_declarator

  28  param_declarator : attributes type_spec declarator

  29  type_spec : simple_type_spec
  30            | STRUCT opt_ident
  31            | struct_declarator
  32            | UNION opt_ident
  33            | union_declarator
  34            | ENUM opt_ident
  35            | enum_declarator
  36            | CONST type_spec
  37            | type_spec CONST

  38  simple_type_spec : FLOAT
  39                   | DOUBLE
  40                   | INT
  41                   | UNSIGNED INT
  42                   | SIGNED INT
  43                   | integer_size opt_int
  44                   | UNSIGNED integer_size opt_int
  45                   | integer_size UNSIGNED opt_int
  46                   | SIGNED integer_size opt_int
  47                   | integer_size SIGNED opt_int
  48                   | CHAR
  49                   | UNSIGNED CHAR
  50                   | SIGNED CHAR
  51                   | BOOLEAN
  52                   | BYTE
  53                   | INT64
  54                   | UNSIGNED INT64
  55                   | SIGNED INT64
  56                   | VOID
  57                   | TYPEIDENT
  58                   | WCHAR_T
  59                   | HANDLE_T

  60  integer_size : LONG
  61               | SMALL
  62               | SHORT
  63               | HYPER
  64               | LONG LONG

  65  opt_int :
  66          | INT

  67  declarators : declarator
  68              | declarators COMMA declarator

  69  declarator : pointer_opt direct_declarator

  70  pointer_opt :
  71              | pointer_opt STAR
  72              | pointer_opt STAR CONST

  73  direct_declarator : ident
  74                    | LPAREN declarator RPAREN
  75                    | direct_declarator array_bounds_declarator

  76  array_bounds_declarator : LBRACKET RBRACKET
  77                          | LBRACKET STAR RBRACKET
  78                          | LBRACKET lexpr RBRACKET

  79  union_name : ident
  80             |

  81  struct_declarator : STRUCT opt_ident LBRACE field_declarators RBRACE
  82                    | UNION opt_ident SWITCH LPAREN simple_type_spec ident RPAREN union_name LBRACE union_body RBRACE

  83  field_declarators : field_declarator
  84                    | field_declarators field_declarator

  85  field_declarator : attributes type_spec declarators SEMI

  86  union_declarator : UNION opt_ident LBRACE union_body RBRACE

  87  union_body : union_case
  88             | union_body union_case

  89  union_case : case_list opt_field_declarator SEMI
  90             | DEFAULT COLON opt_field_declarator SEMI

  91  case_list : case_label
  92            | case_list case_label

  93  case_label : CASE ident COLON

  94  opt_field_declarator :
  95                       | attributes type_spec declarator

  96  enum_declarator : ENUM opt_ident LBRACE enum_cases opt_comma RBRACE

  97  enum_cases : enum_case
  98             | enum_cases COMMA enum_case

  99  enum_case : ident
 100            | ident EQUAL lexpr

 101  opt_comma : COMMA
 102            |

 103  interface_attributes : attributes

 104  attributes :
 105             | LBRACKET attribute_list RBRACKET

 106  attribute_list : attribute
 107                 |
 108                 | attribute_list COMMA attribute
 109                 | attribute_list COMMA

 110  attribute : ident
 111            | ident LPAREN attr_vars RPAREN
 112            | STAR attribute
 113            | attribute STAR
 114            | ident UUID

 115  attr_vars : attr_var
 116            | attr_vars COMMA attr_var

 117  attr_var : lexpr
 118           |

 119  lexpr : IDENT
 120        | INTEGER
 121        | CHARACTER
 122        | TRUE
 123        | FALSE
 124        | STRING
 125        | lexpr QUESTIONMARK lexpr COLON lexpr
 126        | lexpr BARBAR lexpr
 127        | lexpr AMPERAMPER lexpr
 128        | lexpr BAR lexpr
 129        | lexpr CARET lexpr
 130        | lexpr AMPER lexpr
 131        | lexpr EQUALEQUAL lexpr
 132        | lexpr BANGEQUAL lexpr
 133        | lexpr LESS lexpr
 134        | lexpr GREATER lexpr
 135        | lexpr LESSEQUAL lexpr
 136        | lexpr GREATEREQUAL lexpr
 137        | lexpr LESSLESS lexpr
 138        | lexpr GREATERGREATER lexpr
 139        | lexpr GREATERGREATERGREATER lexpr
 140        | lexpr PLUS lexpr
 141        | lexpr MINUS lexpr
 142        | lexpr STAR lexpr
 143        | lexpr SLASH lexpr
 144        | lexpr PERCENT lexpr
 145        | PLUS lexpr
 146        | MINUS lexpr
 147        | TILDE lexpr
 148        | BANG lexpr
 149        | STAR lexpr
 150        | AMPER lexpr
 151        | LPAREN type_expr RPAREN lexpr
 152        | SIZEOF LPAREN type_expr RPAREN
 153        | lexpr LBRACKET lexpr RBRACKET
 154        | lexpr MINUSGREATER ident
 155        | lexpr DOT ident
 156        | lexpr DOT INTEGER
 157        | LPAREN lexpr RPAREN

 158  type_expr : type_spec
 159            | type_spec abstract_declarator

 160  abstract_declarator : STAR
 161                      | STAR direct_abstract_declarator
 162                      | direct_abstract_declarator

 163  direct_abstract_declarator : LPAREN abstract_declarator RPAREN
 164                             | direct_abstract_declarator array_bounds_declarator

 165  opt_ident :
 166            | ident

 167  opt_superinterface :
 168                     | COLON ident

 169  opt_semi : SEMI
 170           |

 171  ident : IDENT
 172        | TYPEIDENT

 173  tydef_ident : ident

 174  quote : QUOTE LPAREN STRING RPAREN
 175        | QUOTE LPAREN ident COMMA STRING RPAREN
 176        | CPP_QUOTE LPAREN STRING RPAREN

 177  %entry% : '\001' file

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . file  (177)
	component_list : .  (2)

	.  reduce 2

	file  goto 3
	component_list  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	%entry% : '\001' file .  (177)

	.  reduce 177


4: shift/reduce conflict (shift 5, reduce 104) on CONST
state 4
	file : component_list . EOF  (1)
	component_list : component_list . component  (3)
	attributes : .  (104)

	CONST  shift 5
	CPP_QUOTE  shift 6
	EOF  shift 7
	IMPORT  shift 8
	LBRACKET  shift 9
	QUOTE  shift 10
	TYPEDEF  shift 11
	BOOLEAN  reduce 104
	BYTE  reduce 104
	CHAR  reduce 104
	DOUBLE  reduce 104
	ENUM  reduce 104
	FLOAT  reduce 104
	HANDLE_T  reduce 104
	HYPER  reduce 104
	INT  reduce 104
	INT64  reduce 104
	INTERFACE  reduce 104
	LONG  reduce 104
	SHORT  reduce 104
	SIGNED  reduce 104
	SMALL  reduce 104
	STRUCT  reduce 104
	TYPEIDENT  reduce 104
	UNION  reduce 104
	UNSIGNED  reduce 104
	VOID  reduce 104
	WCHAR_T  reduce 104

	component  goto 12
	const_decl  goto 13
	type_decl  goto 14
	attributes  goto 15
	fun_decl  goto 16
	interface_attributes  goto 17
	quote  goto 18


state 5
	const_decl : CONST . attributes type_spec pointer_opt IDENT EQUAL lexpr  (17)
	attributes : .  (104)

	LBRACKET  shift 9
	BOOLEAN  reduce 104
	BYTE  reduce 104
	CHAR  reduce 104
	CONST  reduce 104
	DOUBLE  reduce 104
	ENUM  reduce 104
	FLOAT  reduce 104
	HANDLE_T  reduce 104
	HYPER  reduce 104
	INT  reduce 104
	INT64  reduce 104
	LONG  reduce 104
	SHORT  reduce 104
	SIGNED  reduce 104
	SMALL  reduce 104
	STRUCT  reduce 104
	TYPEIDENT  reduce 104
	UNION  reduce 104
	UNSIGNED  reduce 104
	VOID  reduce 104
	WCHAR_T  reduce 104

	attributes  goto 19


state 6
	quote : CPP_QUOTE . LPAREN STRING RPAREN  (176)

	LPAREN  shift 20
	.  error


state 7
	file : component_list EOF .  (1)

	.  reduce 1


state 8
	component : IMPORT . STRING SEMI  (15)

	STRING  shift 21
	.  error


state 9
	attributes : LBRACKET . attribute_list RBRACKET  (105)
	attribute_list : .  (107)

	IDENT  shift 22
	STAR  shift 23
	TYPEIDENT  shift 24
	COMMA  reduce 107
	RBRACKET  reduce 107

	ident  goto 25
	attribute_list  goto 26
	attribute  goto 27


state 10
	quote : QUOTE . LPAREN STRING RPAREN  (174)
	quote : QUOTE . LPAREN ident COMMA STRING RPAREN  (175)

	LPAREN  shift 28
	.  error


state 11
	type_decl : TYPEDEF . attributes type_spec declarators  (18)
	attributes : .  (104)

	LBRACKET  shift 9
	BOOLEAN  reduce 104
	BYTE  reduce 104
	CHAR  reduce 104
	CONST  reduce 104
	DOUBLE  reduce 104
	ENUM  reduce 104
	FLOAT  reduce 104
	HANDLE_T  reduce 104
	HYPER  reduce 104
	INT  reduce 104
	INT64  reduce 104
	LONG  reduce 104
	SHORT  reduce 104
	SIGNED  reduce 104
	SMALL  reduce 104
	STRUCT  reduce 104
	TYPEIDENT  reduce 104
	UNION  reduce 104
	UNSIGNED  reduce 104
	VOID  reduce 104
	WCHAR_T  reduce 104

	attributes  goto 29


state 12
	component_list : component_list component .  (3)

	.  reduce 3


state 13
	component : const_decl . SEMI  (4)

	SEMI  shift 30
	.  error


state 14
	component : type_decl . SEMI  (5)

	SEMI  shift 31
	.  error


state 15
	component : attributes . struct_declarator SEMI  (6)
	component : attributes . union_declarator SEMI  (7)
	component : attributes . enum_declarator SEMI  (8)
	component : attributes . STRUCT opt_ident SEMI  (9)
	component : attributes . UNION opt_ident SWITCH LPAREN simple_type_spec ident RPAREN SEMI  (10)
	component : attributes . UNION opt_ident SEMI  (11)
	fun_decl : attributes . type_spec pointer_opt IDENT LPAREN param_list_declarator RPAREN opt_quotes  (19)
	interface_attributes : attributes .  (103)

	BOOLEAN  shift 32
	BYTE  shift 33
	CHAR  shift 34
	CONST  shift 35
	DOUBLE  shift 36
	ENUM  shift 37
	FLOAT  shift 38
	HANDLE_T  shift 39
	HYPER  shift 40
	INT  shift 41
	INT64  shift 42
	LONG  shift 43
	SHORT  shift 44
	SIGNED  shift 45
	SMALL  shift 46
	STRUCT  shift 47
	TYPEIDENT  shift 48
	UNION  shift 49
	UNSIGNED  shift 50
	VOID  shift 51
	WCHAR_T  shift 52
	INTERFACE  reduce 103

	struct_declarator  goto 53
	union_declarator  goto 54
	enum_declarator  goto 55
	simple_type_spec  goto 56
	type_spec  goto 57
	integer_size  goto 58


state 16
	component : fun_decl . SEMI  (12)

	SEMI  shift 59
	.  error


state 17
	component : interface_attributes . INTERFACE tydef_ident opt_superinterface LBRACE component_list RBRACE opt_semi  (13)
	component : interface_attributes . INTERFACE tydef_ident SEMI  (14)

	INTERFACE  shift 60
	.  error


state 18
	component : quote . opt_semi  (16)
	opt_semi : .  (170)

	SEMI  shift 61
	BOOLEAN  reduce 170
	BYTE  reduce 170
	CHAR  reduce 170
	CONST  reduce 170
	CPP_QUOTE  reduce 170
	DOUBLE  reduce 170
	ENUM  reduce 170
	EOF  reduce 170
	FLOAT  reduce 170
	HANDLE_T  reduce 170
	HYPER  reduce 170
	IMPORT  reduce 170
	INT  reduce 170
	INT64  reduce 170
	INTERFACE  reduce 170
	LBRACKET  reduce 170
	LONG  reduce 170
	QUOTE  reduce 170
	RBRACE  reduce 170
	SHORT  reduce 170
	SIGNED  reduce 170
	SMALL  reduce 170
	STRUCT  reduce 170
	TYPEDEF  reduce 170
	TYPEIDENT  reduce 170
	UNION  reduce 170
	UNSIGNED  reduce 170
	VOID  reduce 170
	WCHAR_T  reduce 170

	opt_semi  goto 62


state 19
	const_decl : CONST attributes . type_spec pointer_opt IDENT EQUAL lexpr  (17)

	BOOLEAN  shift 32
	BYTE  shift 33
	CHAR  shift 34
	CONST  shift 35
	DOUBLE  shift 36
	ENUM  shift 37
	FLOAT  shift 38
	HANDLE_T  shift 39
	HYPER  shift 40
	INT  shift 41
	INT64  shift 42
	LONG  shift 43
	SHORT  shift 44
	SIGNED  shift 45
	SMALL  shift 46
	STRUCT  shift 63
	TYPEIDENT  shift 48
	UNION  shift 64
	UNSIGNED  shift 50
	VOID  shift 51
	WCHAR_T  shift 52
	.  error

	struct_declarator  goto 65
	union_declarator  goto 66
	enum_declarator  goto 67
	simple_type_spec  goto 56
	type_spec  goto 68
	integer_size  goto 58


state 20
	quote : CPP_QUOTE LPAREN . STRING RPAREN  (176)

	STRING  shift 69
	.  error


state 21
	component : IMPORT STRING . SEMI  (15)

	SEMI  shift 70
	.  error


state 22
	ident : IDENT .  (171)

	.  reduce 171


state 23
	attribute : STAR . attribute  (112)

	IDENT  shift 22
	STAR  shift 23
	TYPEIDENT  shift 24
	.  error

	ident  goto 25
	attribute  goto 71


state 24
	ident : TYPEIDENT .  (172)

	.  reduce 172


state 25
	attribute : ident .  (110)
	attribute : ident . LPAREN attr_vars RPAREN  (111)
	attribute : ident . UUID  (114)

	LPAREN  shift 72
	UUID  shift 73
	COMMA  reduce 110
	RBRACKET  reduce 110
	STAR  reduce 110


state 26
	attributes : LBRACKET attribute_list . RBRACKET  (105)
	attribute_list : attribute_list . COMMA attribute  (108)
	attribute_list : attribute_list . COMMA  (109)

	COMMA  shift 74
	RBRACKET  shift 75
	.  error


state 27
	attribute_list : attribute .  (106)
	attribute : attribute . STAR  (113)

	STAR  shift 76
	COMMA  reduce 106
	RBRACKET  reduce 106


state 28
	quote : QUOTE LPAREN . STRING RPAREN  (174)
	quote : QUOTE LPAREN . ident COMMA STRING RPAREN  (175)

	IDENT  shift 22
	STRING  shift 77
	TYPEIDENT  shift 24
	.  error

	ident  goto 78


state 29
	type_decl : TYPEDEF attributes . type_spec declarators  (18)

	BOOLEAN  shift 32
	BYTE  shift 33
	CHAR  shift 34
	CONST  shift 35
	DOUBLE  shift 36
	ENUM  shift 37
	FLOAT  shift 38
	HANDLE_T  shift 39
	HYPER  shift 40
	INT  shift 41
	INT64  shift 42
	LONG  shift 43
	SHORT  shift 44
	SIGNED  shift 45
	SMALL  shift 46
	STRUCT  shift 63
	TYPEIDENT  shift 48
	UNION  shift 64
	UNSIGNED  shift 50
	VOID  shift 51
	WCHAR_T  shift 52
	.  error

	struct_declarator  goto 65
	union_declarator  goto 66
	enum_declarator  goto 67
	simple_type_spec  goto 56
	type_spec  goto 79
	integer_size  goto 58


state 30
	component : const_decl SEMI .  (4)

	.  reduce 4


state 31
	component : type_decl SEMI .  (5)

	.  reduce 5


state 32
	simple_type_spec : BOOLEAN .  (51)

	.  reduce 51


state 33
	simple_type_spec : BYTE .  (52)

	.  reduce 52


state 34
	simple_type_spec : CHAR .  (48)

	.  reduce 48


state 35
	type_spec : CONST . type_spec  (36)

	BOOLEAN  shift 32
	BYTE  shift 33
	CHAR  shift 34
	CONST  shift 35
	DOUBLE  shift 36
	ENUM  shift 37
	FLOAT  shift 38
	HANDLE_T  shift 39
	HYPER  shift 40
	INT  shift 41
	INT64  shift 42
	LONG  shift 43
	SHORT  shift 44
	SIGNED  shift 45
	SMALL  shift 46
	STRUCT  shift 63
	TYPEIDENT  shift 48
	UNION  shift 64
	UNSIGNED  shift 50
	VOID  shift 51
	WCHAR_T  shift 52
	.  error

	struct_declarator  goto 65
	union_declarator  goto 66
	enum_declarator  goto 67
	simple_type_spec  goto 56
	type_spec  goto 80
	integer_size  goto 58


state 36
	simple_type_spec : DOUBLE .  (39)

	.  reduce 39


37: shift/reduce conflict (shift 22, reduce 165) on IDENT
37: shift/reduce conflict (shift 24, reduce 165) on TYPEIDENT
state 37
	type_spec : ENUM . opt_ident  (34)
	enum_declarator : ENUM . opt_ident LBRACE enum_cases opt_comma RBRACE  (96)
	opt_ident : .  (165)

	IDENT  shift 22
	TYPEIDENT  shift 24
	CONST  reduce 165
	LBRACE  reduce 165
	LPAREN  reduce 165
	RPAREN  reduce 165
	STAR  reduce 165

	opt_ident  goto 81
	ident  goto 82


state 38
	simple_type_spec : FLOAT .  (38)

	.  reduce 38


state 39
	simple_type_spec : HANDLE_T .  (59)

	.  reduce 59


state 40
	integer_size : HYPER .  (63)

	.  reduce 63


state 41
	simple_type_spec : INT .  (40)

	.  reduce 40


state 42
	simple_type_spec : INT64 .  (53)

	.  reduce 53


state 43
	integer_size : LONG .  (60)
	integer_size : LONG . LONG  (64)

	LONG  shift 83
	CONST  reduce 60
	IDENT  reduce 60
	INT  reduce 60
	LPAREN  reduce 60
	RPAREN  reduce 60
	SIGNED  reduce 60
	STAR  reduce 60
	TYPEIDENT  reduce 60
	UNSIGNED  reduce 60


state 44
	integer_size : SHORT .  (62)

	.  reduce 62


state 45
	simple_type_spec : SIGNED . INT  (42)
	simple_type_spec : SIGNED . integer_size opt_int  (46)
	simple_type_spec : SIGNED . CHAR  (50)
	simple_type_spec : SIGNED . INT64  (55)

	CHAR  shift 84
	HYPER  shift 40
	INT  shift 85
	INT64  shift 86
	LONG  shift 43
	SHORT  shift 44
	SMALL  shift 46
	.  error

	integer_size  goto 87


state 46
	integer_size : SMALL .  (61)

	.  reduce 61


47: shift/reduce conflict (shift 22, reduce 165) on IDENT
state 47
	component : attributes STRUCT . opt_ident SEMI  (9)
	type_spec : STRUCT . opt_ident  (30)
	struct_declarator : STRUCT . opt_ident LBRACE field_declarators RBRACE  (81)
	opt_ident : .  (165)

	IDENT  shift 22
	TYPEIDENT  shift 24
	CONST  reduce 165
	LBRACE  reduce 165
	SEMI  reduce 165
	STAR  reduce 165

	opt_ident  goto 88
	ident  goto 82


state 48
	simple_type_spec : TYPEIDENT .  (57)

	.  reduce 57


49: shift/reduce conflict (shift 22, reduce 165) on IDENT
state 49
	component : attributes UNION . opt_ident SWITCH LPAREN simple_type_spec ident RPAREN SEMI  (10)
	component : attributes UNION . opt_ident SEMI  (11)
	type_spec : UNION . opt_ident  (32)
	struct_declarator : UNION . opt_ident SWITCH LPAREN simple_type_spec ident RPAREN union_name LBRACE union_body RBRACE  (82)
	union_declarator : UNION . opt_ident LBRACE union_body RBRACE  (86)
	opt_ident : .  (165)

	IDENT  shift 22
	TYPEIDENT  shift 24
	CONST  reduce 165
	LBRACE  reduce 165
	SEMI  reduce 165
	STAR  reduce 165
	SWITCH  reduce 165

	opt_ident  goto 89
	ident  goto 82


state 50
	simple_type_spec : UNSIGNED . INT  (41)
	simple_type_spec : UNSIGNED . integer_size opt_int  (44)
	simple_type_spec : UNSIGNED . CHAR  (49)
	simple_type_spec : UNSIGNED . INT64  (54)

	CHAR  shift 90
	HYPER  shift 40
	INT  shift 91
	INT64  shift 92
	LONG  shift 43
	SHORT  shift 44
	SMALL  shift 46
	.  error

	integer_size  goto 93


state 51
	simple_type_spec : VOID .  (56)

	.  reduce 56


state 52
	simple_type_spec : WCHAR_T .  (58)

	.  reduce 58


state 53
	component : attributes struct_declarator . SEMI  (6)
	type_spec : struct_declarator .  (31)

	SEMI  shift 94
	CONST  reduce 31
	IDENT  reduce 31
	STAR  reduce 31


state 54
	component : attributes union_declarator . SEMI  (7)
	type_spec : union_declarator .  (33)

	SEMI  shift 95
	CONST  reduce 33
	IDENT  reduce 33
	STAR  reduce 33


state 55
	component : attributes enum_declarator . SEMI  (8)
	type_spec : enum_declarator .  (35)

	SEMI  shift 96
	CONST  reduce 35
	IDENT  reduce 35
	STAR  reduce 35


state 56
	type_spec : simple_type_spec .  (29)

	.  reduce 29


state 57
	fun_decl : attributes type_spec . pointer_opt IDENT LPAREN param_list_declarator RPAREN opt_quotes  (19)
	type_spec : type_spec . CONST  (37)
	pointer_opt : .  (70)

	CONST  shift 97
	IDENT  reduce 70
	STAR  reduce 70

	pointer_opt  goto 98


state 58
	simple_type_spec : integer_size . opt_int  (43)
	simple_type_spec : integer_size . UNSIGNED opt_int  (45)
	simple_type_spec : integer_size . SIGNED opt_int  (47)
	opt_int : .  (65)

	INT  shift 99
	SIGNED  shift 100
	UNSIGNED  shift 101
	CONST  reduce 65
	IDENT  reduce 65
	LPAREN  reduce 65
	RPAREN  reduce 65
	STAR  reduce 65
	TYPEIDENT  reduce 65

	opt_int  goto 102


state 59
	component : fun_decl SEMI .  (12)

	.  reduce 12


state 60
	component : interface_attributes INTERFACE . tydef_ident opt_superinterface LBRACE component_list RBRACE opt_semi  (13)
	component : interface_attributes INTERFACE . tydef_ident SEMI  (14)

	IDENT  shift 22
	TYPEIDENT  shift 24
	.  error

	ident  goto 103
	tydef_ident  goto 104


state 61
	opt_semi : SEMI .  (169)

	.  reduce 169


state 62
	component : quote opt_semi .  (16)

	.  reduce 16


63: shift/reduce conflict (shift 22, reduce 165) on IDENT
63: shift/reduce conflict (shift 24, reduce 165) on TYPEIDENT
state 63
	type_spec : STRUCT . opt_ident  (30)
	struct_declarator : STRUCT . opt_ident LBRACE field_declarators RBRACE  (81)
	opt_ident : .  (165)

	IDENT  shift 22
	TYPEIDENT  shift 24
	CONST  reduce 165
	LBRACE  reduce 165
	LPAREN  reduce 165
	RPAREN  reduce 165
	STAR  reduce 165

	opt_ident  goto 105
	ident  goto 82


64: shift/reduce conflict (shift 22, reduce 165) on IDENT
64: shift/reduce conflict (shift 24, reduce 165) on TYPEIDENT
state 64
	type_spec : UNION . opt_ident  (32)
	struct_declarator : UNION . opt_ident SWITCH LPAREN simple_type_spec ident RPAREN union_name LBRACE union_body RBRACE  (82)
	union_declarator : UNION . opt_ident LBRACE union_body RBRACE  (86)
	opt_ident : .  (165)

	IDENT  shift 22
	TYPEIDENT  shift 24
	CONST  reduce 165
	LBRACE  reduce 165
	LPAREN  reduce 165
	RPAREN  reduce 165
	STAR  reduce 165
	SWITCH  reduce 165

	opt_ident  goto 106
	ident  goto 82


state 65
	type_spec : struct_declarator .  (31)

	.  reduce 31


state 66
	type_spec : union_declarator .  (33)

	.  reduce 33


state 67
	type_spec : enum_declarator .  (35)

	.  reduce 35


state 68
	const_decl : CONST attributes type_spec . pointer_opt IDENT EQUAL lexpr  (17)
	type_spec : type_spec . CONST  (37)
	pointer_opt : .  (70)

	CONST  shift 97
	IDENT  reduce 70
	STAR  reduce 70

	pointer_opt  goto 107


state 69
	quote : CPP_QUOTE LPAREN STRING . RPAREN  (176)

	RPAREN  shift 108
	.  error


state 70
	component : IMPORT STRING SEMI .  (15)

	.  reduce 15


state 71
	attribute : STAR attribute .  (112)
	attribute : attribute . STAR  (113)

	.  reduce 112


state 72
	attribute : ident LPAREN . attr_vars RPAREN  (111)
	attr_var : .  (118)

	AMPER  shift 109
	BANG  shift 110
	CHARACTER  shift 111
	FALSE  shift 112
	IDENT  shift 113
	INTEGER  shift 114
	LPAREN  shift 115
	MINUS  shift 116
	PLUS  shift 117
	SIZEOF  shift 118
	STAR  shift 119
	STRING  shift 120
	TILDE  shift 121
	TRUE  shift 122
	COMMA  reduce 118
	RPAREN  reduce 118

	lexpr  goto 123
	attr_vars  goto 124
	attr_var  goto 125


state 73
	attribute : ident UUID .  (114)

	.  reduce 114


state 74
	attribute_list : attribute_list COMMA . attribute  (108)
	attribute_list : attribute_list COMMA .  (109)

	IDENT  shift 22
	STAR  shift 23
	TYPEIDENT  shift 24
	COMMA  reduce 109
	RBRACKET  reduce 109

	ident  goto 25
	attribute  goto 126


state 75
	attributes : LBRACKET attribute_list RBRACKET .  (105)

	.  reduce 105


state 76
	attribute : attribute STAR .  (113)

	.  reduce 113


state 77
	quote : QUOTE LPAREN STRING . RPAREN  (174)

	RPAREN  shift 127
	.  error


state 78
	quote : QUOTE LPAREN ident . COMMA STRING RPAREN  (175)

	COMMA  shift 128
	.  error


state 79
	type_decl : TYPEDEF attributes type_spec . declarators  (18)
	type_spec : type_spec . CONST  (37)
	pointer_opt : .  (70)

	CONST  shift 97
	IDENT  reduce 70
	LPAREN  reduce 70
	STAR  reduce 70
	TYPEIDENT  reduce 70

	pointer_opt  goto 129
	declarators  goto 130
	declarator  goto 131


80: shift/reduce conflict (shift 97, reduce 36) on CONST
state 80
	type_spec : CONST type_spec .  (36)
	type_spec : type_spec . CONST  (37)

	CONST  shift 97
	IDENT  reduce 36
	LPAREN  reduce 36
	RPAREN  reduce 36
	STAR  reduce 36
	TYPEIDENT  reduce 36


state 81
	type_spec : ENUM opt_ident .  (34)
	enum_declarator : ENUM opt_ident . LBRACE enum_cases opt_comma RBRACE  (96)

	LBRACE  shift 132
	CONST  reduce 34
	IDENT  reduce 34
	LPAREN  reduce 34
	RPAREN  reduce 34
	STAR  reduce 34
	TYPEIDENT  reduce 34


state 82
	opt_ident : ident .  (166)

	.  reduce 166


state 83
	integer_size : LONG LONG .  (64)

	.  reduce 64


state 84
	simple_type_spec : SIGNED CHAR .  (50)

	.  reduce 50


state 85
	simple_type_spec : SIGNED INT .  (42)

	.  reduce 42


state 86
	simple_type_spec : SIGNED INT64 .  (55)

	.  reduce 55


state 87
	simple_type_spec : SIGNED integer_size . opt_int  (46)
	opt_int : .  (65)

	INT  shift 99
	CONST  reduce 65
	IDENT  reduce 65
	LPAREN  reduce 65
	RPAREN  reduce 65
	STAR  reduce 65
	TYPEIDENT  reduce 65

	opt_int  goto 133


state 88
	component : attributes STRUCT opt_ident . SEMI  (9)
	type_spec : STRUCT opt_ident .  (30)
	struct_declarator : STRUCT opt_ident . LBRACE field_declarators RBRACE  (81)

	LBRACE  shift 134
	SEMI  shift 135
	CONST  reduce 30
	IDENT  reduce 30
	STAR  reduce 30


state 89
	component : attributes UNION opt_ident . SWITCH LPAREN simple_type_spec ident RPAREN SEMI  (10)
	component : attributes UNION opt_ident . SEMI  (11)
	type_spec : UNION opt_ident .  (32)
	struct_declarator : UNION opt_ident . SWITCH LPAREN simple_type_spec ident RPAREN union_name LBRACE union_body RBRACE  (82)
	union_declarator : UNION opt_ident . LBRACE union_body RBRACE  (86)

	LBRACE  shift 136
	SEMI  shift 137
	SWITCH  shift 138
	CONST  reduce 32
	IDENT  reduce 32
	STAR  reduce 32


state 90
	simple_type_spec : UNSIGNED CHAR .  (49)

	.  reduce 49


state 91
	simple_type_spec : UNSIGNED INT .  (41)

	.  reduce 41


state 92
	simple_type_spec : UNSIGNED INT64 .  (54)

	.  reduce 54


state 93
	simple_type_spec : UNSIGNED integer_size . opt_int  (44)
	opt_int : .  (65)

	INT  shift 99
	CONST  reduce 65
	IDENT  reduce 65
	LPAREN  reduce 65
	RPAREN  reduce 65
	STAR  reduce 65
	TYPEIDENT  reduce 65

	opt_int  goto 139


state 94
	component : attributes struct_declarator SEMI .  (6)

	.  reduce 6


state 95
	component : attributes union_declarator SEMI .  (7)

	.  reduce 7


state 96
	component : attributes enum_declarator SEMI .  (8)

	.  reduce 8


state 97
	type_spec : type_spec CONST .  (37)

	.  reduce 37


state 98
	fun_decl : attributes type_spec pointer_opt . IDENT LPAREN param_list_declarator RPAREN opt_quotes  (19)
	pointer_opt : pointer_opt . STAR  (71)
	pointer_opt : pointer_opt . STAR CONST  (72)

	IDENT  shift 140
	STAR  shift 141
	.  error


state 99
	opt_int : INT .  (66)

	.  reduce 66


state 100
	simple_type_spec : integer_size SIGNED . opt_int  (47)
	opt_int : .  (65)
